<resources>
    <string name="app_name">Qolami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_aplikasi">Qolami Project adalah aplikasi yang bertujuan sebagai pembelajaran bahasa arab yang menggunakan Metode Qolami, karena metode Qolami itu sendiri belum pernah di pakai oleh pihak manapun sehingga membuat kami sebagai pengembangan aplikasi perangkat lunak menuangkan metodi Qolami ini kedalam suatu aplikasi, Sedangkan dari sisi pengguna aplikasi ini bertujuan untuk menjadikan aplikasi sebagai bentuk media pembelajaran dari berbagai usia bahkan bisa digunakan untuk para Guru agama untuk mengajari murid nya dengan mengenal metode Qolami ini. Metode Qolami juga dikenal dapat diartikan secara KBBI adalah Menulis dengan metode ini Qolami juga berbeda dengan metode yang lainya pastinya Maka dari itu kami sebagai Developer ingin menuangkan Metode ini kedalam Aplikasi berbentuk Mobile karena akan mudah diakses untuk semua pengguna</string>
    <string name="password_text">Kata Sandi</string>
    <string name="login_text">Masuk</string>
    <string name="doesnt_have_account_ask">Tidak Punya Akun ? Daftar di Sini !</string>
    <string name="fullname_text">Nama Lengkap</string>
    <string name="confirm_password_text">Konfirmasi Kata Sandi</string>
    <string name="daftar_text">Daftar</string>
    <string name="already_have_Account_ask_text">Sudah Punya Akun ?, Masuk di sini</string>
    <string name="lesson_and_practice_text">Belajar dan Latihan</string>
    <string name="writing_test_text">Ujian Menulis</string>
    <string name="change_password_text">Ganti Password</string>
    <string name="application_information_text">Informasi Aplikasi</string>
    <string name="log_out_text">Keluar</string>
    <string name="settings_text">Pengaturan</string>
    <string name="practice_text">Latihan</string>
    <string name="lesson_gallery_text">Galeri Pelajaran</string>
    <string name="hijaiyah_alphabet_text">Huruf Hijaiyah</string>
    <string name="hijaiyah_gallery_text">Galeri Hijaiyah</string>
    <string name="practice_gallery_text">Galeri Latihan</string>
    <string name="check_text">Cek</string>
    <string name="score_text">Skor :</string>
    <string name="save_text">Simpan</string>
    <string name="old_password_text">Kata Sandi Lama</string>
    <string name="new_password_text">Kata Sandi Baru</string>
    <string name="confirm_new_password_text">Konfirmasi Kata Sandi Baru</string>
    <string name="cancel_text">Batal</string>
    <string name="duration_10_second_text">Durasi : 10 Detik</string>
    <string name="question_10_text">Jumlah Soal : 10</string>
    <string name="start_text">Mulai</string>
    <string name="history_text">Riwayat</string>
    <string name="gambar_lah_huruf_di_atas">Gambar lah huruf di atas</string>
    <string name="submit_text">Kirim</string>
    <string name="result_text">Hasil</string>
    <string name="finished_text">Terselesaikan</string>
    <string name="start_again_text">Mulai Kembali</string>
    <string name="nomor_history">Nomor</string>
</resources>