<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.changePassword.ChangePasswordFragment"
    android:orientation="vertical"
    android:background="#D0E3FF"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_text"
        android:fontFamily="@font/nunitoextrabold"
        android:textColor="#015B8B"
        android:textSize="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/etOldPassword"
        android:inputType="textPassword"
        android:hint="@string/old_password_text"
        android:background="@drawable/custom_edit_text2"
        android:paddingStart="@dimen/_10sdp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/etNewPassword"
        android:inputType="textPassword"
        android:hint="@string/new_password_text"
        android:background="@drawable/custom_edit_text2"
        android:paddingStart="@dimen/_10sdp"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_10sdp"
        android:id="@+id/etConfNewPassword"
        android:inputType="textPassword"
        android:hint="@string/confirm_new_password_text"
        android:background="@drawable/custom_edit_text2"
        android:paddingStart="@dimen/_10sdp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp">
        
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/custom_button"
            android:text="@string/save_text"
            android:fontFamily="@font/nunitoextrabold"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:id="@+id/btnChangePassword"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/custom_button"
            android:text="@string/cancel_text"
            android:fontFamily="@font/nunitoextrabold"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:textAllCaps="false"
            android:id="@+id/btnCancelPassword"
            android:layout_marginStart="@dimen/_15sdp"

            />
    </LinearLayout>



</LinearLayout>